<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简易计算器</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
        <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="numd">.</string>
    <string name="numy">%</string>
    <string name="numAdd">＋</string>
    <string name="numSub">－</string>
    <string name="numMult">×</string>
    <string name="numDiv">÷</string>
    <string name="numMinus">-</string>
    <string name="numEqual">=</string>
    <string name="backSpace">退格</string>
    <string name="clear">清空</string>

    

</resources>